--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
     <div>
 
-    <div class="main">
+    <!--<div class="main">
         <div class="d2"</div>
         <div class="d3"></div>
     </div>
-
+-->
     <div class="typewriter">
-      <h1>Done by Shounak and Abhishek</h1>
+      <h1>Welcome to our project!</h1>
 
    </div>
 
