--- a/us.html
+++ b/us.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <title>Welcome to our project</title>
   <br>
-  <br>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-<div style="align:center;">
 
-</div>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <marquee style="background-color:pink;"> This project has been done by Shounak and Abhishek</marquee>
+
   <h1 class="ml14" style="text-align: center; height: 30%; width:100%; color: #eeb4ff; display:flex; align-items: center; justify-content:center">
     <span class="text-wrapper">
       <span class="letters"> Done by:- Shounak and Abhishek  </span>
