--- a/home.html
+++ b/home.html
@@ -14,6 +14,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+
+
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -94,13 +96,13 @@
       display: block;
     }
 
-    html {
+html {
       scroll-behavior: smooth;
     }
 
     @media only screen and (min-width : 120px) {
       .carousel-caption {
-        top: 65%;
+        top: 75%;
       }
     }
 
@@ -126,7 +128,6 @@
 </head>
 
 <body>
-  <marquee style="background-color:yellow;"> This project has been done by Shounak and Abhishek</marquee>
   <span class="navbar">
 
     <a href="home.html">Home</a>
@@ -136,7 +137,7 @@
     <a href="options.html">Search for options</a>
 
     <a href="upload.html">Upload to sell</a>
-    <a href="partners.html">View our partners</a>
+    <a href="#about">What we do?</a>
     <a href="us.html">About Us</a>
   <!--  <div class="dropdown">
       <button class="dropbtn">What-else?
@@ -153,9 +154,7 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
+
 
   <div class="carousel slide" data-ride="carousel" id="slide">
     <ul class="carousel-indicators">
@@ -164,11 +163,13 @@
       <li data-target="#slide" data-slide-to="2"></li>
     </ul>
 
-    <div class="carousel-inner" style="width: 100%; height: 1000px !important;">
+    <div class="carousel-inner" style="width: 100%; height: 700px !important;">
 
       <div class="carousel-item">
         <img src="1.jpg" style="width: 100%; height: 700px;">
+
         <div class="carousel-caption">
+          <h1 style="color: black; font-size: 70px;  transform: translateY(-550%);">Helping you save and earn</h1>
           <br><br><br>
 
         </div>
@@ -177,6 +178,7 @@
 
         <img src="2.jpg" style="width: 100%; height: 700px;">
         <div class="carousel-caption">
+          <h1 style="font-size: 70px; transform: translateY(-550%);">Channelising you to your client</h1>
           <br><br><br>
 
         </div>
@@ -184,20 +186,47 @@
       <div class="carousel-item">
         <img src="vit.jpg" style="width: 100%; height: 700px;">
         <div class="carousel-caption">
+          <h1 style="font-size: 70px; transform: translateY(-550%);">What happens in VIT stays in VIT</h1>
 
         </div>
       </div>
     </div>
     <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
+      <div class="carousel-control-prev-icon" aria-hidden="true"></div>
+      <div class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
+      <div class="carousel-control-next-icon" aria-hidden="true"></div>
+      <div class="sr-only">Next</div>
+</a>
+    </div>
+</div>
+
+<div class="jumbotron" id="about">
+        <div class="container-fluid padding">
+            <div class="row welcome text-center">
+                <div class="col-12">
+                    <h2 class="display-4">What we do</h2><br>
+										<h5 class="jumbotron">Presenting our formula:- Take a picture + Upload + Post = trust !</h5>
+
+
+                </div>
+                <hr>
+            </div>
+        </div>
+
+		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+
+			<p class="lead">
+								We recognize the trust you place in us when you keep your item
+            </p>
+		</div>
+  </div>
+
+
       <div class="container-fluid padding">
               <div class="row text-center">
-                  <div class="col-md-4">
+              <div class="col-md-4">
                       <a class="navbar-brand" href="#"></a>
                       <hr class="light">
                       <p>999-999-9999</p>
