--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
     }
 
     .logo {
-      flex: 2;
+      flex: 0.3;
     }
 
     .nav-links {
@@ -189,6 +189,60 @@
   .lead {
     text-align: center;
   }
+  .contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+}
+.contact-form .form-control{
+    border-radius:1rem;
+}
+.contact-image{
+    text-align: center;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: white;
+}
+.contact-form .btnContact {
+    width: 50%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #dc3545;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+
+}
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+
+}
+
   </style>
 </head>
 
@@ -204,9 +258,10 @@
       <a href="foreword.html">Foreword</a>
       <a href="options.html">Search for options</a>
 
-      <a href="upload.html">Upload to sell</a>
+      <a href="praccc.html">Upload to sell</a>
       <a href="#about">What we do?</a>
       <a href="us.html">About Us</a>
+      <a href="#contact-us">Contact Us</a>
     </div>
   </div>
 
@@ -221,6 +276,9 @@
 
       <div class="carousel-item">
         <img src="1.jpg" style="width: 100%; height: 700px;">
+
+
+
 
         <div class="carousel-caption">
           <h1 style="color: black; font-size: 70px;  transform: translateY(-550%);">Helping you save and earn</h1>
@@ -266,39 +324,38 @@
     <img src="./undraw_business_deal_cpi9.svg" alt="">
   </div>
 </div>
-  <div class="jumbotron" id="about">
+  <div class="jumbotron" id="about" style="background: #b3b3ff;">
     <div class="container-fluid padding">
       <div class="row welcome text-center">
         <div class="col-12">
-          <h2 class="display-4">What we do</h2><br>
+          <h2 class="display-4" style="color:white;">What we do</h2><br>
           <div class="what-we-do__cards row">
             <div class="col-xs-12">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="https://www.google.com/maps/d/u/0/thumbnail?mid=1TyLN5ZVJpcoQgLS-ARAQvzokASo" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Near me</h5>
+                  <p class="card-text">Check items near me</p>
+                  <a href="nearme.html" class="btn btn-primary">Click here</a></div>
+              </div>
+            </div>
+            <div class="col-xs-12">
+              <div class="card" style="width: 18rem;">
+                <img src="https://images.cdn3.stockunlimited.net/clipart/hot-item-label_1499293.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Trending items</h5>
+                  <p class="card-text">Check what our users are currently looking into.</p>
+                  <a href="nearme.html" class="btn btn-primary">Click here</a>
                 </div>
               </div>
             </div>
             <div class="col-xs-12">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="https://www.dolibarr.org/forum/uploads/dolibarrorg/original/2X/f/fe8b91af755f01c9c5f811b9a0d0537b71815667.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-12">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Search by Index</h5>
+                  <p class="card-text">Search by order and filters</p>
+                  <a href="#" class="btn btn-primary">Click here</a>
                 </div>
               </div>
             </div>
@@ -314,12 +371,43 @@
         We recognize the trust you place in us when you keep your item
       </p>
   </div>
-
+  <div class="content" id="contact-us" style="background-color: #e6e6ff; margin-top:-2%;
+margin-bottom:-0.85%; padding: 0.5%">
+  <div class="container contact-form" style="background-color:#6C63FF">
+              <div class="contact-image">
+                  <img src="#" alt="shounak_abhishek_company_logo"/>
+              </div>
+              <form method="post">
+                  <h3>Drop Us a Message</h3>
+                 <div class="row">
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
+                          </div>
+                          <div class="form-group">
+                              <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+                          </div>
+                      </div>
+                  </div>
+              </form>
+  </div>
+</div>
 
   <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-md-4">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#" alt="shounak_abhishek_logo">LOGO</a>
         <hr class="light">
         <p>999-999-9999</p>
         <p>email@gmail.com</p>
