--- a/praccc.html
+++ b/praccc.html
@@ -1,61 +1,429 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<html>
 
-<link rel="stylesheet" href="stylesss.css">
-    <title></title>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  </head>
-  <body>
-    <span class="navbar">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    form-final {
+  background: url("fp.jpg") center center no-repeat;
+  background-size: cover;
+  transform: translateY(200px);
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  font-size: 12pt;
+  font-family: "Bookman";
+  color: #ff0055;
+}
+
+    .navbar {
+      display: flex;
+      overflow: hidden;
+      background: #6C63FF;
+      /* width: 100%; */
+      justify-content: space-evenly;
+      padding: 20px;
+      position: sticky;
+      top: 0;
+      z-index: 15;
+    }
+
+    .home {
+      margin-top: 60px;
+    }
+
+    .logo {
+      flex: 0.3;
+    }
+
+    .nav-links {
+      flex: 3;
+    }
+
+    .navbar a {
+      /* float: right; */
+      font-size: 24px;
+      color: white;
+      /* text-align: center; */
+      padding: 14px 16px 15px 14px;
+      text-decoration: none;
+    }
+
+    .dropdown {
+      float: right;
+      overflow: hidden;
+    }
+
+    .dropdown .dropbtn {
+      font-size: 16px;
+      border: none;
+      outline: none;
+      color: cyan;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
+
+    .navbar a:hover,
+    .dropdown:hover .dropbtn {
+      background: #534AE8;
+      transition: all 0.25s ease-in ;
+    }
+
+    .dropdown-content-for-values {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content-for-values a {
+      float: none;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
+
+    body {
+      animation: fadeInAnimation ease 5s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes fadeInAnimation {
+      0% {
+        opacity: 0;
+      }
+
+      100% {
+        opacity: 1;
+      }
+    }
+
+    .dropdown-content-for-values a:hover {
+      background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
+    @media only screen and (min-width : 120px) {
+      .carousel-caption {
+        top: 75%;
+      }
+    }
+
+
+    .carousel-item {
+      transition: -webkit-transform 0.5s ease;
+      transition: transform 0.5s ease;
+      transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+      -webkit-backface-visibility: visible;
+      backface-visibility: visible;
+    }
+
+    .carousel-inner img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .carousel-caption button a:hover {
+      margin-bottom: 30%;
+      text-decoration: none;
+    }
+
+  .home {
+    display: flex;
+  }
+
+  .home > div {
+    flex: 1;
+  }
+
+  .main-text {
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .main-text span:nth-child(1) {
+    font-size: 64px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bolder;
+  }
+
+  .sub-text {
+    font-size: 32px;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  .what-we-do__cards {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .lead {
+    text-align: center;
+  }
+  .contact-us
+  {
+  width: 100vw;
+  height: 90vh;
+    background: white;
+    padding: 50px 50px;
+    border-top: 10px solid  #2e2eb8;
+    border-bottom: 10px solid  #2e2eb8;
+    border-left: 10px solid  #2e2eb8;
+    border-right: 10px solid  #2e2eb8;
+
+    padding-right:15%;
+    padding-left:15%;
+
+  }
+
+  label, input, textarea {
+    display: block;
+    color: #6C63FF;
+    width: 100%;
+    font-size: 12pt;
+    line-height: 24pt;
+    font-family: "Spartan";
+  }
+
+  input {
+    margin-bottom: 24pt;
+  }
+
+  h3 {
+    font-weight: normal;
+    font-size: 10pt;
+    line-height: 24pt;
+    font-style: italic;
+    margin: 0 0 0.5em 0;
+  }
+
+  span {
+    font-size: 8pt;
+  }
+
+  em {
+    color: #e6e6ff;
+    font-weight: bold;
+  }
+
+  input, textarea {
+    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    background: #e6e6ff;
+    padding-left: 5px;
+    outline: none;
+  }
+
+  input:focus, textarea:focus {
+    border: 1px solid #e6e6ff;
+  }
+
+  textarea {
+    resize: none;
+  }
+
+  button {
+    display: block;
+    float: right;
+    line-height: 24pt;
+    padding: 0 20px;
+    border: none;
+    background: #6C63FF;;
+    color: white;
+    letter-spacing: 2px;
+    transition: 0.2s all ease-in-out;
+    border-bottom: 2px solid transparent;
+    outline: none;
+  }
+  button:hover {
+    background: inherit;
+    color: #f45702;
+    border-bottom: 2px solid #f45702;
+  }
+
+  ::selection {
+    background: #ffc7b8;
+  }
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus {
+    border: 1px solid #6bd4b1;
+    -webkit-text-fill-color: #2A293E;
+    -webkit-box-shadow: 0 0 0px 1000px #f8f4e5 inset;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+
+  </style>
+</head>
+
+<body>
+  <div class="navbar">
+    <div class="logo">
+      VITOLX
+    </div>
+    <div class="nav-links">
       <a href="home.html">Home</a>
       <a href="partner.html">Our partners</a>
 
       <a href="foreword.html">Foreword</a>
       <a href="options.html">Search for options</a>
 
-      <a href="upload.html">Upload to sell</a>
-      <a href="#about">What we do?</a>
+      <a href="praccc.html">Upload to sell</a>
       <a href="us.html">About Us</a>
-    <!--  <div class="dropdown">
-        <button class="dropbtn">What-else?
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content-for-values">
-          <a href="us.html">About us</a>
-          <a href="#">Collaborations</a>
-          <a href="#">Link 3</a>
+    </div>
+  </div>
+
+  <!-- <div class="carousel slide" data-ride="carousel" id="slide">
+    <ul class="carousel-indicators">
+      <li data-target="#slide" data-slide-to="0" classs="active"></li>
+      <li data-target="#slide" data-slide-to="1"></li>
+      <li data-target="#slide" data-slide-to="2"></li>
+    </ul>
+
+    <div class="carousel-inner" style="width: 100%; height: 700px !important;">
+
+      <div class="carousel-item">
+        <img src="1.jpg" style="width: 100%; height: 700px;">
+
+
+
+
+        <div class="carousel-caption">
+          <h1 style="color: black; font-size: 70px;  transform: translateY(-550%);">Helping you save and earn</h1>
+          <br><br><br>
+
         </div>
       </div>
-  -->
-    </span>
+      <div class="carousel-item active">
 
-    <div class="contact-us">
-      <h1 styles="text-align:center">UPLOAD ITEM</h1>
-      <form action="#">
-        <label for="customerName">NAME <em>&#x2a;</em></label>
-        <input id="customerName" name="customerName" required="" type="text" />
-        <label for="customerEmail">EMAIL <em>&#x2a;</em></label>
-        <input id="customerEmail" name="customerEmail" required="" type="email" />
-        <label for="customerPhone">PHONE</label>
-        <input id="customerPhone" name="customerPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" type="tel" />
-        <label for="customerPhone">FILE UPLOAD</label>
+        <img src="2.jpg" style="width: 100%; height: 700px;">
+        <div class="carousel-caption">
+          <h1 style="font-size: 70px; transform: translateY(-550%);">Channelising you to your client</h1>
+          <br><br><br>
 
- <input type="file" id="myFile" name="filename">
-        <label for="orderNumber">Description</label>
-        <input id="orderNumber" name="orderNumber" type="text" />
-        <h3>
-          Please make sure the document consists an image of the item you want to sell
-        </h3>
-        <button id="customerOrder">SUBMIT</button>
-      </form>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="vit.jpg" style="width: 100%; height: 700px;">
+        <div class="carousel-caption">
+          <h1 style="font-size: 70px; transform: translateY(-550%);">What happens in VIT stays in VIT</h1>
+
+        </div>
+      </div>
     </div>
+    <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
+      <div class="carousel-control-prev-icon" aria-hidden="true"></div>
+      <div class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
+      <div class="carousel-control-next-icon" aria-hidden="true"></div>
+      <div class="sr-only">Next</div>
+    </a>
+  </div> -->
+<div class="form-final">
+<div style="width:49%; float:left; transform: translateY(10%)">
+  <img src="undraw_pay_online_b1hk.svg">
+</div>
+  <div class="contact-us" style="width:48%; float: right;">
+        <h1 style="text-align:center; color: #6C63FF;">UPLOAD ITEM</h1>
+        <form action="#">
+          <label for="customerName">NAME <em>&#x2a;</em></label>
+          <input id="customerName" name="customerName" required="" type="text" />
+          <label for="customerEmail">EMAIL <em>&#x2a;</em></label>
+          <input id="customerEmail" name="customerEmail" required="" type="email" />
+          <label for="customerPhone">PHONE</label>
+          <input id="customerPhone" name="customerPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" type="tel" />
+          <label for="customerPhone">FILE UPLOAD</label>
 
-  </body>
+   <input type="file" id="myFile" name="filename">
+          <label for="orderNumber">Description</label>
+          <input id="orderNumber" name="orderNumber" type="text" />
+          <h3>
+            Please make sure the document consists an image of the item you want to sell
+          </h3>
+          <button id="customerOrder">SUBMIT</button>
+        </form>
+      </div>
+</div>
+
+</body>
+  <div class="container-fluid padding" style="position:sticky; margin-top: 980px;">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <a class="navbar-brand" href="#"></a>
+        <hr class="light">
+        <p>999-999-9999</p>
+        <p>email@gmail.com</p>
+        <p>Dtreet name</p>
+        <p>City, State, 00000</p>
+      </div>
+      <div class="col-md-4">
+        <hr class="light">
+        <h5>Our hours</h5>
+        <hr class="light">
+        <p>Monday: 9am to 5pm</p>
+        <p>Saturday: 10am to 6pm</p>
+        <p>Sunday closed</p>
+      </div>
+      <div class="col-md-4">
+        <hr class="light">
+        <h5>Service Area</h5>
+        <hr class="light">
+        <p>City, State, 00000</p>
+        <p>City, State, 00000</p>
+        <p>City, State, 00000</p>
+        <p>City, State, 00000</p>
+      </div>
+    </div>
+  </div>
+
+
+
 </html>
