updated user search

--- a/praccc.html
+++ b/praccc.html
@@ -48,6 +48,7 @@
       /* width: 100%; */
       justify-content: space-evenly;
       padding: 20px;
+      align-self: flex-end;
       position: sticky;
       top: 0;
       z-index: 15;
@@ -58,7 +59,7 @@
     }
 
     .logo {
-      flex: 0.3;
+      flex: 0.9;
     }
 
     .nav-links {
@@ -205,16 +206,16 @@
   .contact-us
   {
   width: 100vw;
-  height: 90vh;
+  height: 120vh;
     background: white;
-    padding: 50px 50px;
+    padding: 10px 10px;
     border-top: 10px solid  #2e2eb8;
     border-bottom: 10px solid  #2e2eb8;
     border-left: 10px solid  #2e2eb8;
     border-right: 10px solid  #2e2eb8;
 
-    padding-right:15%;
-    padding-left:15%;
+    padding-right:5%;
+    padding-left:5%;
 
   }
 
@@ -368,10 +369,10 @@
     </a>
   </div> -->
 <div class="form-final">
-<div style="width:49%; float:left; transform: translateY(10%)">
+<div style="width:30vw; float:left; transform: translateY(10%);">
   <img src="undraw_pay_online_b1hk.svg">
 </div>
-  <div class="contact-us" style="width:48%; float: right;">
+  <div class="contact-us" style="width:35%; float: right;">
         <h1 style="text-align:center; color: #6C63FF;">UPLOAD ITEM</h1>
         <form action="#">
           <label for="customerName">NAME <em>&#x2a;</em></label>
@@ -394,7 +395,7 @@
 </div>
 
 </body>
-  <div class="container-fluid padding" style="position:sticky; margin-top: 980px;">
+  <div class="container-fluid padding" style="position:sticky; margin-top: 900px;">
     <div class="row text-center">
       <div class="col-md-4">
         <a class="navbar-brand" href="#"></a>
