updates iwp review

--- a/foreword.html
+++ b/foreword.html
@@ -253,7 +253,7 @@
     </div>
     <div class="nav-links">
       <a href="home.html">Home</a>
-      <a href="home.html">Our partners</a>
+      <a href="partner.html">Our partners</a>
 
       <a href="foreword.html">Foreword</a>
       <a href="options.html">Search for options</a>
@@ -324,47 +324,26 @@
     <img src="./undraw_business_deal_cpi9.svg" alt="">
   </div>
 </div>
-  <div class="jumbotron" id="about" style="background: #b3b3ff;">
+  <div class="jumbotron" id="about" style="background: white;">
     <div class="container-fluid padding">
       <div class="row welcome text-center">
         <div class="col-12">
           <h2 class="display-4" style="color:white;">What we do</h2><br>
-          <div class="what-we-do__cards row">
-            <div class="col-xs-12">
-              <div class="card" style="width: 18rem;">
-                <img src="https://www.google.com/maps/d/u/0/thumbnail?mid=1TyLN5ZVJpcoQgLS-ARAQvzokASo" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Near me</h5>
-                  <p class="card-text">Check items near me</p>
-                  <a href="nearme.html" class="btn btn-primary">Click here</a></div>
-              </div>
-            </div>
-            <div class="col-xs-12">
-              <div class="card" style="width: 18rem;">
-                <img src="https://images.cdn3.stockunlimited.net/clipart/hot-item-label_1499293.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Trending items</h5>
-                  <p class="card-text">Check what our users are currently looking into.</p>
-                  <a href="nearme.html" class="btn btn-primary">Click here</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-12">
-              <div class="card" style="width: 18rem;">
-                <img src="https://www.dolibarr.org/forum/uploads/dolibarrorg/original/2X/f/fe8b91af755f01c9c5f811b9a0d0537b71815667.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Search by Index</h5>
-                  <p class="card-text">Search by order and filters</p>
-                  <a href="#" class="btn btn-primary">Click here</a>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="row welcome text-center">
+    <div class="col-12">
+        <h2 class="display-4">FOREWORD</h2><br>
+<i>        <h5>Our goal through this project is to install and improve the system of give and take.<br> We are a new outfit in the vicinity and this journey has been undertaken in light of our IWP project.<br> We want to inculcate a system of minimal wastage and hence <b style="text-transform:uppercase;"> we are here to help you become you...better</b></h5>
+</i>
+<h5>We have tied up with various shops across the city too to gain more footage.</h5>
+    </div>
+    <hr>
+</div>
 
         </div>
         <hr>
       </div>
     </div>
+
 <br>
 
       <p class="lead">
