--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
       position: sticky;
       top: 0;
       z-index: 15;
+      height: 76px;
     }
 
     .home {
@@ -45,7 +46,7 @@
     }
 
     .logo {
-      flex: 0.3;
+      flex: 2;
     }
 
     .nav-links {
@@ -54,7 +55,7 @@
 
     .navbar a {
       /* float: right; */
-      font-size: 24px;
+      font-size: 20px;
       color: white;
       /* text-align: center; */
       padding: 14px 16px 15px 14px;
